--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent {
+        label 'linux'
         docker {
-            label 'my-test-label'
             image 'maven:3-alpine'
             args '-v /root/.m2:/root/.m2'
         }
