--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
     agent {
-        label 'master'
+        label 'slave'
         docker {
             image 'maven:3-alpine'
             args '-v /root/.m2:/root/.m2'
