--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh 'Hello World'
+                sh 'echo Hello World'
 //                 sh 'mvn -B -DskipTests clean package'
             }
         }
