--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,16 +1,22 @@
 pipeline {
     agent {
         label 'docker-azcli-kubectl-slave'
-//         docker {
-//             image 'maven:3-alpine'
-//             args '-v /root/.m2:/root/.m2'
-//         }
     }
     stages {
         stage('Build') {
+            
+            
+            agent {
+
+                docker {
+                    image 'maven:3-alpine'
+                    args '-v /root/.m2:/root/.m2'
+                }
+            }
+            
+            
             steps {
-                sh 'echo Hello World'
-//                 sh 'mvn -B -DskipTests clean package'
+                sh 'mvn -B -DskipTests clean package'
             }
         }
         stage('Test') {
