--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
     agent {
-        label 'docker-azcli-kubectl-slave'
+        label 'docker-maven-slave'
     }
     stages {
         stage('Build') {
