--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,7 +1,9 @@
 pipeline {
     agent {
-        label 'docker-maven-slave'
-        image 'maven:3-alpine'
+        label 'docker-maven-slave'{
+            image 'maven:3-alpine'
+        }
+        
     }
     stages {
         stage('Build') {
